discussion/kv_engine/178979/178979_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add FollyConnection

Change-Id: Icdd99a859d0c47c5aece4e4df94fd9a4759b61d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-19 12:52:10.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-19 13:16:46.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19614/ : FAILURE

clang-tidy found the following problems:

<pre>
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16: error: invalid application of "sizeof" to an incomplete type "cb::daemon::AsyncReadCallback" [clang-diagnostic-error]
        static_assert(sizeof(_Tp)>0,
                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:361:4: note: in instantiation of member function "std::default_delete<cb::daemon::AsyncReadCallback>::operator()" requested here
          get_deleter()(std::move(__ptr));
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:29:7: note: in instantiation of member function "std::unique_ptr<cb::daemon::AsyncReadCallback, std::default_delete<cb::daemon::AsyncReadCallback> >::~unique_ptr" requested here
class FollyConnection : public Connection {
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:361:4: note: in instantiation of member function "std::default_delete<FollyConnection>::operator()" requested here
          get_deleter()(std::move(__ptr));
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:1075:12: note: in instantiation of member function "std::unique_ptr<FollyConnection, std::default_delete<FollyConnection> >::~unique_ptr" requested here
    return std::make_unique<FollyConnection>(
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:16:7: note: forward declaration of "cb::daemon::AsyncReadCallback"
class AsyncReadCallback;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16: error: invalid application of "sizeof" to an incomplete type "cb::daemon::AsyncWriteCallback" [clang-diagnostic-error]
        static_assert(sizeof(_Tp)>0,
                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:361:4: note: in instantiation of member function "std::default_delete<cb::daemon::AsyncWriteCallback>::operator()" requested here
          get_deleter()(std::move(__ptr));
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:29:7: note: in instantiation of member function "std::unique_ptr<cb::daemon::AsyncWriteCallback, std::default_delete<cb::daemon::AsyncWriteCallback> >::~unique_ptr" requested here
class FollyConnection : public Connection {
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:361:4: note: in instantiation of member function "std::default_delete<FollyConnection>::operator()" requested here
          get_deleter()(std::move(__ptr));
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:1075:12: note: in instantiation of member function "std::unique_ptr<FollyConnection, std::default_delete<FollyConnection> >::~unique_ptr" requested here
    return std::make_unique<FollyConnection>(
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:17:7: note: forward declaration of "cb::daemon::AsyncWriteCallback"
class AsyncWriteCallback;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:357:2: error: static_assert failed due to requirement "__is_invocable<folly::DelayedDestruction::Destructor &, folly::AsyncSocket *>::value" "unique_ptr"s deleter must be invocable with a pointer" [clang-diagnostic-error]
        static_assert(__is_invocable<deleter_type&, pointer>::value,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_folly.h:29:7: note: in instantiation of member function "std::unique_ptr<folly::AsyncSocket, folly::DelayedDestruction::Destructor>::~unique_ptr" requested here
class FollyConnection : public Connection {
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:361:4: note: in instantiation of member function "std::default_delete<FollyConnection>::operator()" requested here
          get_deleter()(std::move(__ptr));
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:1075:12: note: in instantiation of member function "std::unique_ptr<FollyConnection, std::default_delete<FollyConnection> >::~unique_ptr" requested here
    return std::make_unique<FollyConnection>(
           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:361:4: error: no matching function for call to object of type "std::unique_ptr<folly::AsyncSocket, folly::DelayedDestruction::Destructor>::deleter_type" (aka "folly::DelayedDestruction::Destructor") [clang-diagnostic-error]
          get_deleter()(std::move(__ptr));
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/io/async/DelayedDestruction.h:71:10: note: candidate function not viable: cannot convert argument of incomplete type "typename std::remove_reference<AsyncSocket *&>::type" (aka "folly::AsyncSocket *") to "folly::DelayedDestruction *" for 1st argument
    void operator()(DelayedDestruction* dd) const { dd->destroy(); }
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19614/ )

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16:
error: invalid application of "sizeof" to an incomplete type "cb::daemon::AsyncReadCallback" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19614/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40781/ : FAILURE

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:83:16:
error: invalid application of "sizeof" to an incomplete type "cb::daemon::AsyncReadCallback"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40781/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22633/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes
[2022-08-19T13:14:58.829Z] unknown file: Failure
[2022-08-19T13:14:58.829Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck: Unexpected buffer bytes:0 expected:582" thrown in the test body.
[2022-08-19T13:14:58.829Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (45 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithCompressibleValue/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22633/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20826/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20826/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18826/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48526/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9406/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9307/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21910/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21555/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29936/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
